--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fluentui/react-icons": "^2.0.265",
     "@fortawesome/fontawesome-free": "^6.6.0",
+    "@react-oauth/google": "^0.12.1",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "formik": "^2.4.6",
