--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,9 +15,12 @@
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "dotenv": "^16.4.5",
     "formik": "^2.4.6",
+    "google-auth-library": "^9.15.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
+    "react-devtools": "^6.0.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.28.0",
