--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_GOOGLE_CLIENT_ID=172493269774-4qr965tabedoqajcv49jpu2btps6sg8v.apps.googleusercontent.com
-REACT_APP_API_URL=http://localhost:5000
+REACT_APP_GOOGLE_CLIENT_ID="172493269774-4qr965tabedoqajcv49jpu2btps6sg8v.apps.googleusercontent.com"
+REACT_APP_API_URL="http://localhost:5000"
