--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "classnames": "^2.5.1",
     "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
