--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,8 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-paginate": "^8.2.0",
+    "react-phone-input-2": "^2.15.1",
+    "react-phone-number-input": "^3.4.9",
     "react-router-dom": "^6.28.0",
     "sass": "^1.80.6",
     "yup": "^1.4.0"
