--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
+    "passport-magic-link": "^2.1.1",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
     "prisma": "^5.22.0",
