--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@fluentui/react-icons": "^2.0.265",
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@react-oauth/google": "^0.12.1",
+    "@videosdk.live/react-sdk": "^0.1.103",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "classnames": "^2.5.1",
@@ -25,6 +26,7 @@
     "react-paginate": "^8.2.0",
     "react-phone-input-2": "^2.15.1",
     "react-phone-number-input": "^3.4.9",
+    "react-player": "^2.16.0",
     "react-router-dom": "^6.28.0",
     "sass": "^1.80.6",
     "yup": "^1.4.0"
