--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ dist-ssr
 
 # Editor directories and files
 .vscode/*
+backend/prisma/migrations
 !.vscode/settings.json
 !.vscode/extensions.json
 .idea
