--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ dist-ssr
 
 # Editor directories and files
 .vscode/*
+frontend/eslint.config.js
 backend/prisma/migrations
 !.vscode/settings.json
 !.vscode/extensions.json
