--- a/backend/package.json
+++ b/backend/package.json
@@ -22,7 +22,7 @@
     "body-parser": "^1.20.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "crypto": "^1.0.1",
+    "depcheck": "^1.4.7",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-session": "^1.18.1",
@@ -30,17 +30,16 @@
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.16",
     "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "passport-magic-link": "^2.1.1",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
     "prisma": "^5.22.0",
     "sequelize": "^6.37.5",
+    "validator": "^13.12.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.7",
-    "prisma-generator-fake-data": "^0.14.3"
+    "nodemon": "^3.1.7"
   }
 }
