--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-session": "^1.18.1",
+    "express-ws": "^5.0.2",
     "google-auth-library": "^9.15.0",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.16",
