--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "react-phone-number-input": "^3.4.9",
     "react-player": "^2.16.0",
     "react-router-dom": "^6.28.0",
+    "react-use-websocket": "^4.11.1",
     "sass": "^1.80.6",
     "yup": "^1.4.0"
   },
