--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "express-ws": "^5.0.2",
     "google-auth-library": "^9.15.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
