--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
     "passport": "^0.7.0",
+    "passport-custom": "^1.1.1",
     "passport-local": "^1.0.0",
     "passport-magic-link": "^2.1.1",
     "pg": "^8.13.1",
