--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,18 +10,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
     "@fluentui/react-icons": "^2.0.265",
     "@fortawesome/fontawesome-free": "^6.6.0",
+    "@mui/material": "^6.1.10",
+    "@mui/x-date-pickers": "^7.23.1",
     "@react-oauth/google": "^0.12.1",
     "@videosdk.live/react-sdk": "^0.1.103",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "classnames": "^2.5.1",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "formik": "^2.4.6",
     "luxon": "^3.5.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
+    "react-datetime-picker": "^6.0.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-paginate": "^8.2.0",
