--- a/backend/package.json
+++ b/backend/package.json
@@ -27,7 +27,7 @@
     "express": "^4.21.1",
     "express-session": "^1.18.1",
     "express-ws": "^5.0.2",
-    "google-auth-library": "^9.15.0",
+    "googleapis": "^144.0.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
