--- a/backend/package.json
+++ b/backend/package.json
@@ -28,9 +28,12 @@
     "express-session": "^1.18.1",
     "express-ws": "^5.0.2",
     "googleapis": "^144.0.0",
+    "JSONStream": "^1.3.5",
     "jsonwebtoken": "^9.0.2",
+    "ml-matrix": "^6.12.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
+    "pandas": "^0.0.3",
     "passport": "^0.7.0",
     "passport-custom": "^1.1.1",
     "passport-local": "^1.0.0",
@@ -39,6 +42,7 @@
     "pg-hstore": "^2.3.4",
     "prisma": "^5.22.0",
     "sequelize": "^6.37.5",
+    "sklearn": "^1.0.0",
     "validator": "^13.12.0",
     "yup": "^1.4.0"
   },
