--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
     "googleapis": "^144.0.0",
     "JSONStream": "^1.3.5",
     "jsonwebtoken": "^9.0.2",
+    "luxon": "^3.5.0",
     "ml-matrix": "^6.12.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
