--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,7 @@
   "description": "",
   "dependencies": {
     "@faker-js/faker": "^9.2.0",
-    "@prisma/client": "^5.22.0",
+    "@prisma/client": "^6.3.1",
     "@quixo3/prisma-session-store": "^3.1.13",
     "argon2": "^0.41.1",
     "bcrypt": "^5.1.1",
@@ -41,13 +41,13 @@
     "passport-magic-link": "^2.1.1",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
-    "prisma": "^5.22.0",
     "sequelize": "^6.37.5",
     "sklearn": "^1.0.0",
     "validator": "^13.12.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "prisma": "^6.3.1"
   }
 }
