--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
   "description": "",
   "dependencies": {
     "@faker-js/faker": "^9.2.0",
+    "@google/generative-ai": "^0.21.0",
     "@prisma/client": "^6.3.1",
     "@quixo3/prisma-session-store": "^3.1.13",
     "argon2": "^0.41.1",
