--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "chart.js": "^2.9.4",
-    "react-chartjs-2": "^2.11.2"
+    "lucide-react": "^0.475.0",
+    "react-chartjs-2": "^2.11.2",
+    "recharts": "^2.15.1"
   }
 }
