--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,15 +18,18 @@ services:
     command: npx vite --host
     volumes:
       - ./frontend:/frontend
-  # backend:
-  #   environment:
-  #     DB_HOST: "db"
-  #   ports:
-  #     - "5000:5000"
-  #   depends_on:
-  #     - db
-  #   build:
-  #     context: ./backend
-  #     dockerfile: Dockerfile-env
-  #   volumes:
-  #     - ./backend:/backend
+  backend:
+    image: node:lts-bookworm
+    ports:
+      - "5000:5000"
+    environment:
+      DATABASE_URL: "postgresql://test:test@db:5432/test?schema=public"
+    depends_on:
+      - db
+    working_dir: /backend
+    command: npm run dev
+    # build:
+      # context: ./backend
+      # dockerfile: Dockerfile-env
+    volumes:
+      - ./backend:/backend
