--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-datetime-picker": "^6.0.1",
     "react-dom": "^18.3.1",
+    "react-feather": "^2.0.10",
     "react-icons": "^5.3.0",
     "react-paginate": "^8.2.0",
     "react-phone-input-2": "^2.15.1",
