--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,10 +26,12 @@
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "formik": "^2.4.6",
+    "framer-motion": "^12.4.3",
     "lucide-react": "^0.475.0",
     "luxon": "^3.5.0",
     "react": "^18.3.1",
-    "react-bootstrap": "^2.10.5",
+    "react-bootstrap": "^2.10.9",
+    "react-calendar": "^5.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-datetime-picker": "^6.0.1",
     "react-dom": "^18.3.1",
@@ -43,6 +45,7 @@
     "react-use-websocket": "^4.11.1",
     "recharts": "^2.15.1",
     "sass": "^1.80.6",
+    "styled-components": "^6.1.15",
     "yup": "^1.4.0"
   },
   "devDependencies": {
